--- a/src/components/inProgress/inProgress.css
+++ b/src/components/inProgress/inProgress.css
@@ -1,7 +1,8 @@
 #noti{
   display:flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
 }
 #bg{
   width: 100vw;
@@ -10,4 +11,7 @@
   justify-content: center;
   align-items: center;
   background-color: azure;
+}
+button{
+  margin:10px;
 }
